--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ html {
 }
 
 body {
-    background-color: rgba(192,192,192,0.8);
-    border: 5px dashed purple;
+    background-color: rgba(192,192,192,0.6);
     color: black;
     margin: 0 auto;
     text-align: center;
@@ -24,9 +23,14 @@ body {
 }
 
 /* calculator */
+
+.main {
+    border: 2px solid;
+    margin-top: 200px;
+}
+
 .main input {
     background: none;
-    border: 4px solid red;
     box-shadow: none;
     font-size: 40px;
     padding: 20px;
@@ -60,9 +64,9 @@ body {
 }
 
 .redback {
-    background: red ;
+    background: rgba(255,99,71, 0.8) ;
 }
 
 .greenback {
-    background: green;
+    background: rgba(144,238,144, 0.8);
 }
