--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    background: url("tumblr_inline_mlky22MWwd1r53miq.png");
+    background: url("backg.png");
     font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", 
     "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", 
     "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
